# otus_algo

./: .gitmodules  CMakeLists.txt  README.md  benchmarking_policy.org  plot_tools.py
algebra/: CMakeLists.txt
algebra/fibo/: CMakeLists.txt  fibo.cpp  utils.cpp  utils.hpp
algebra/power/: CMakeLists.txt  power.cpp
algebra/primes/: CMakeLists.txt  primes.cpp
b_tree/: CMakeLists.txt  avl.cpp  avl.hpp  avl_visual.cpp  avl_vs_bst.cpp  b_tree.cpp  b_tree.hpp  insert_rotations_cmp.py  measures.cpp  measures.hpp  tests.hpp  tree.cpp  tree.hpp
bitboard/: CMakeLists.txt  bishop.cpp  bitboard.cpp  bitboard.hpp  castle.cpp  king.cpp  queen.cpp
hashes/: CMakeLists.txt  hash_table.cpp  hash_table.hpp  hashes_measures.cpp  hashes_test.cpp  measures.hpp  test.cpp  test.hpp
sort/: CMakeLists.txt  measures.hpp  test.hpp
sort/6_simple_sort/: CMakeLists.txt  bubble_plot.py  insertion_plot.py  measures.cpp  shell_plot.py  sort.hpp  test.cpp  upper_bound.cpp
sort/7_heap_sort/: CMakeLists.txt  measures.cpp  plots.py  sort.hpp  test.cpp
string_search/: CMakeLists.txt  TODO.org  counter.hpp  full_search.cpp  full_search.hpp  full_search_measures.cpp  full_search_test.cpp  measures.cpp  measures.hpp  test.cpp  test.hpp  types.hpp  unigen.cpp  utf8_parse.cpp  utf8_tools.cpp  utf8_tools.hpp
string_search/22_boyer_moore/: CMakeLists.txt  bm_measures.cpp  bm_search.cpp  bm_search.hpp  bm_test.cpp  test_visual.cpp
string_search/24_kmp/: CMakeLists.txt  kmp_comparison.py  kmp_measures.cpp  kmp_search.cpp  kmp_search.hpp  kmp_test.cpp
string_search/report/: REPORT.org  degenerate.py  degenerate_comparisons.py  random_comparisons.py  random_plot.py  report.org  small_alph_comparisons.py  small_alphabet.py  string_functions_plot.py
strings/: CMakeLists.txt  main.cpp
structures/: CMakeLists.txt  TASK.org  add_back_plot.py  add_random_matrix_plot.py  add_random_plot.py  array_measure.cpp  array_test.cpp  dynamic.cpp  dynamic.hpp  dynamic_array.hpp  matrix_array.hpp  matrix_measure.cpp  matrix_test.cpp  measure_tools.cpp  measure_tools.hpp  plot_tools.py  tests.hpp  wrapper.hpp
tester/: CMakeLists.txt  files.cpp  files.hpp  logger.cpp  logger.hpp  main.cpp  problem.cpp  problem.hpp  test.cpp  test.hpp  types.hpp  validator.cpp  validator.hpp
tester/tests/: CMakeLists.txt  cat.cpp  reproc_poll.cpp  reproc_test.cpp  reproc_test2.cpp  reproc_test3.cpp  test3.cpp
tickets/: CMakeLists.txt  github_token  main.cpp
trees/: CMakeLists.txt  avl.cpp  avl.hpp  b_tree.hpp  display.cpp  display.hpp  insert_plot.py  measures.hpp  node.hpp  search_plot.py
