cmake_minimum_required(VERSION 3.1)

project(otus_algo LANGUAGES CXX)
add_compile_options(-Wall)

add_subdirectory(tester)
add_subdirectory(strings)
add_subdirectory(tickets)
add_subdirectory(bitboard)
add_subdirectory(algebra)
add_subdirectory(structures)
add_subdirectory(sort)
add_subdirectory(b_tree)
add_subdirectory(string_search)
add_subdirectory(hashes)
# enable_testing()
